final upload to publish